# helium-program-library

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .sentryclirc  .yarnrc.yml  AUTHORITIES_DOCUMENTATION.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Procfile  README.md  SECURITY.md  bootstrap-localnet.sh  build-anchor-ts.sh  docker-info.json  helium-program-library.code-workspace  lerna.json  onboHxQSGJH2PCkFG3WPp5K3zWHFC57nBNW4dYFyxLo.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.root.json  tsconfig.test.json  tsconfig.tsbuildinfo  turbo.json  upgrade-idls.sh
anchor-30-programs/: .gitignore  Anchor.toml  Cargo.toml  buffer
anchor-30-programs/hpl-crons-runner/: package.json  tsconfig.json
anchor-30-programs/hpl-crons-runner/src/: queue-hotspot-claims.ts  queue-position-claims.ts  queue-proxy-jobs.ts  queue-wallet-claims.ts  requeue-hotspot-claims.ts  start-cron.ts  utils.ts
anchor-30-programs/idls/: helium_entity_manager.json  helium_sub_daos.json  no_emit.json  voter_stake_registry.json
anchor-30-programs/programs/hpl-crons/: Cargo.toml
anchor-30-programs/programs/hpl-crons/src/: error.rs  external_programs.rs  lib.rs  state.rs
anchor-30-programs/tests/: hpl-crons.js  hpl-crons.ts
programs/circuit-breaker/: Cargo.toml  README.md
programs/circuit-breaker/src/: errors.rs  lib.rs  state.rs  window.rs
programs/circuit-breaker/src/instructions/: burn_v0.rs  initialize_account_windowed_breaker_v0.rs  initialize_mint_windowed_breaker_v0.rs  mint_v0.rs  mod.rs  remove_mint_authority_v0.rs  transfer_v0.rs  update_account_windowed_breaker_v0.rs  update_mint_windowed_breaker_v0.rs
programs/conversion-escrow/: Cargo.toml
programs/conversion-escrow/src/: errors.rs  lib.rs  state.rs
programs/conversion-escrow/src/instructions/: check_repay_v0.rs  initialize_escrow_v0.rs  lend_v0.rs  mod.rs
programs/data-credits/: Cargo.toml  README.md
programs/data-credits/src/: circuit_breaker.rs  errors.rs  lib.rs  state.rs
programs/data-credits/src/instructions/: burn_data_credits_v0.rs  change_delegated_sub_dao_v0.rs  delegate_data_credits_v0.rs  genesis_issue_delegated_data_credits_v0.rs  initialize_data_credits_v0.rs  issue_data_credits_v0.rs  mint_data_credits_v0.rs  mod.rs  update_data_credits_v0.rs  update_in_use_data_credits_v0.rs  use_data_credits_v0.rs
programs/dc-auto-top/: Cargo.toml  README.md
programs/dc-auto-top/src/: errors.rs  lib.rs  state.rs
programs/dc-auto-top/src/instructions/: close_auto_top_off_v0.rs  close_legacy_auto_top_off.rs  initialize_auto_top_off_v0.rs  mod.rs  schedule_task_v0.rs  top_off_dc_v0.rs  top_off_hnt_v0.rs  top_off_v0.rs  update_auto_top_off_v0.rs
programs/dc-conversion-escrow/: Cargo.toml
programs/dc-conversion-escrow/src/: errors.rs  lib.rs  state.rs
programs/dc-conversion-escrow/src/instructions/: initialize_escrow_v0.rs  lend_v0.rs  mod.rs
programs/fanout/: Cargo.toml  README.md
programs/fanout/src/: errors.rs  lib.rs  state.rs
programs/fanout/src/instructions/: distribute_v0.rs  initialize_fanout_v0.rs  mod.rs  stake_v0.rs  unstake_v0.rs
programs/helium-entity-manager/: Cargo.toml  README.md
programs/helium-entity-manager/src/: constants.rs  error.rs  lib.rs  state.rs  token_metadata.rs  utils.rs
programs/helium-sub-daos/: Cargo.toml  README.md
programs/helium-sub-daos/src/: backstop.rs  circuit_breaker.rs  create_account.rs  error.rs  lib.rs  precise_number.rs  signed_precise_number.rs  state.rs  supplement.rs  utils.rs
programs/helium-voter-stake-registry/: Cargo.toml
programs/helium-voter-stake-registry/src/: lib.rs
programs/helium-voter-stake-registry/tests/: test_deposit_cliff_minimum_lockup.rs  test_deposit_cliff_no_minimum_genesis_lockup.rs  test_deposit_cliff_no_minimum_lockup.rs  test_internal_transfer.rs  test_reset_lockup.rs  test_voting.rs
programs/hexboosting/: Cargo.toml  README.md
programs/hexboosting/src/: error.rs  lib.rs  state.rs
programs/hotspot-issuance/: Cargo.toml
programs/hotspot-issuance/src/: error.rs  lib.rs  state.rs  token_metadata.rs
programs/hpl-crons/: Cargo.toml  README.md
programs/hpl-crons/src/: error.rs  lib.rs  state.rs
programs/iot-routing-manager/: Cargo.toml
programs/iot-routing-manager/src/: error.rs  lib.rs  state.rs
programs/lazy-distributor/: Cargo.toml  README.md
programs/lazy-distributor/src/: ed25519.rs  error.rs  lib.rs  state.rs  token_metadata.rs
programs/lazy-transactions/: Cargo.toml  README.md
programs/lazy-transactions/src/: canopy.rs  error.rs  lib.rs  merkle_proof.rs  state.rs  util.rs
programs/mini-fanout/: Cargo.toml  README.md
programs/mini-fanout/src/: errors.rs  lib.rs  resize_to_fit.rs  state.rs
programs/mobile-entity-manager/: Cargo.toml  README.md
programs/mobile-entity-manager/src/: error.rs  lib.rs  state.rs
programs/no-emit/: Cargo.toml  README.md
programs/no-emit/src/: lib.rs
programs/position-voting-rewards/: Cargo.toml
programs/position-voting-rewards/src/: create_account.rs  error.rs  lib.rs  state.rs  util.rs
programs/price-oracle/: Cargo.toml  README.md
programs/price-oracle/src/: error.rs  lib.rs  state.rs  utils.rs
programs/proposal/: Cargo.toml  idl.json
programs/proposal/src/: lib.rs
programs/rewards-oracle/: Cargo.toml  README.md
programs/rewards-oracle/src/: error.rs  lib.rs
programs/sessions/: Cargo.toml
programs/sessions/src/: errors.rs  lib.rs  state.rs
programs/shared-utils/: Cargo.toml
programs/shared-utils/src/: compressed_nfts.rs  epoch.rs  error.rs  lib.rs  resize_to_fit.rs  signed_precise_number.rs  token_metadata.rs
programs/slashing-conversion-escrow/: Cargo.toml
programs/slashing-conversion-escrow/src/: lib.rs  state.rs
programs/test-tracker/: Cargo.toml
programs/test-tracker/src/: lib.rs
programs/treasury-management/: Cargo.toml  README.md
programs/treasury-management/src/: circuit_breaker.rs  curve.rs  error.rs  lib.rs  state.rs  utils.rs
programs/tuktuk-dca/: Cargo.toml  README.md
programs/tuktuk-dca/src/: errors.rs  lib.rs  state.rs
(+642 files in other folders)
