[workspace]
members = [
    "programs/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-sdk = "1.18.22"
solana-quic-client = "1.18"
solana-program = "1.18"
solana-client = "1.18"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
config = { version = "0", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "rt",
  "process",
  "time",
] }
tokio-util = "0"
tokio-stream = { version = "0", features = ["fs"] }
# Keep at 0.10 since zeroize breaks for solana and rsa madness
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
futures = "*"
futures-util = "*"
tracing = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
  "env-filter",
  "registry",
  "fmt",
] }
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
itertools = "0.13"
tokio-graceful-shutdown = "0.15"
solana-transaction-utils = { git = "https://github.com/helium/tuktuk.git", rev = "1fb3ee9" }
tuktuk-program = { git = "https://github.com/helium/tuktuk.git", rev = "1fb3ee9" }
tuktuk-sdk = { git = "https://github.com/helium/tuktuk.git", rev = "1fb3ee9" }
