[package]
name = "data-credits"
version = "0.1.3"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_credits"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
helium-sub-daos = { workspace = true }
circuit-breaker = { workspace = true }
pyth-sdk-solana = { version = "0.8.0" }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
