[package]
name = "data-credits"
version = "0.2.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_credits"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "helium-sub-daos/idl-build", "circuit-breaker/idl-build", "lazy-transactions/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
helium-sub-daos = { workspace = true }
circuit-breaker = { workspace = true }
pyth-solana-receiver-sdk = { workspace = true }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
solana-security-txt = { workspace = true }
pythnet-sdk = { workspace = true }
default-env = { workspace = true }
