[package]
name = "dc-auto-top"
version = "0.0.1"
# Trigger deployment - timestamp: 03-31-2025 #3
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dc_auto_top"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "helium-sub-daos/idl-build", "circuit-breaker/idl-build", "lazy-transactions/idl-build", "data-credits/idl-build", "tuktuk-dca/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-zk-sdk = { workspace = true }
helium-sub-daos = { workspace = true }
circuit-breaker = { workspace = true }
bytemuck = "1.14.0"
pyth-solana-receiver-sdk = { workspace = true }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
data-credits = { path = "../data-credits", features = ["cpi"] }
tuktuk-dca = { path = "../tuktuk-dca", features = ["cpi"] }
solana-security-txt = { workspace = true }
pythnet-sdk = { workspace = true }
default-env = { workspace = true }
clockwork-cron = { workspace = true }
tuktuk-program = { workspace = true }
chrono = { workspace = true }
shared-utils = { workspace = true }