[package]
name = "dc-conversion-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dc_conversion_escrow"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
data-credits = { path = "../data-credits", features = ["cpi"] }
default-env = { workspace = true }
pyth-sdk-solana = { version = "0.8.0" }
