cargo-features = ["workspace-inheritance"]

[package]
name = "fanout"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanout"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
shared-utils = { path = "../../utils/shared-utils" }
mpl-token-metadata = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
