[package]
name = "helium-entity-manager"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helium_entity_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
bs58 = "0.3.1"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
bytemuck = "1.12.3"
angry-purple-tiger = "0.1.0"
mpl-token-metadata = { version = "1.6.4", path = "../../deps/metaplex-program-library/token-metadata/program", features = ["no-entrypoint"] }
mpl-bubblegum = {path = "../../deps/metaplex-program-library/bubblegum/program", features = ["cpi"]}
spl-account-compression = { git = "https://github.com/ChewingGlass/solana-program-library", branch = "feature/anchor-26", version="0.1.5", features = ["cpi"] }
shared-utils = { path = "../shared-utils" }
data-credits = { path = "../data-credits", features = ["cpi"] }
helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
