cargo-features = ["workspace-inheritance"]

[package]
name = "helium-entity-manager"
version = "0.0.8"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helium_entity_manager"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
bs58 = "0.3.1"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = "1.12.3"
angry-purple-tiger = "0.1.0"
mpl-token-metadata = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
shared-utils = { path = "../shared-utils" }
data-credits = { path = "../data-credits", features = ["cpi"] }
helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }
lazy-transactions = { path = "../lazy-transactions", features = ["cpi"] }
