[package]
name = "helium-sub-daos"
version = "0.1.4"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helium_sub_daos"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
voter-stake-registry = { path = "../voter-stake-registry", features = ["no-entrypoint", "cpi"] }
shared-utils = { workspace = true }
circuit-breaker = { workspace = true }
treasury-management = { path = "../treasury-management", features = ["cpi"] }

time = "0.3.17"
spl-governance-tools = { rev = "0377e6452fef0c84148e2d4de6bef08dac7ca16e", git = "https://github.com/solana-labs/solana-program-library.git", version = "0.1.3" }
solana-security-txt = { workspace = true }
default-env = { workspace = true }

[dev-dependencies]
rust_decimal = "=1.26.0"
