[package]
name = "helium-sub-daos"
version = "0.2.24"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helium_sub_daos"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
voter-stake-registry = { path = "../voter-stake-registry", features = ["no-entrypoint", "cpi"] }
shared-utils = { workspace = true }
circuit-breaker = { workspace = true }
no-emit = { workspace = true }
treasury-management = { path = "../treasury-management", features = ["cpi"] }
nft-proxy = { path = "../../utils/nft-proxy" }
proposal = { path = "../../utils/proposal" }
solana-program = { workspace = true }

time = "0.3.17"
solana-security-txt = { workspace = true }
default-env = { workspace = true }

[dev-dependencies]
rust_decimal = "=1.26.0"
