[package]
name = "helium-voter-stake-registry"
version = "0.0.1"
description = "Heliums voter weight plugin for spl-governance"
license = "GPL-3.0-or-later"
homepage = "https://github.com/helium/helium-program-library"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helium_voter_stake_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.25.0" }
bytemuck = "1.12.3"
# WARNING: Be careful about upgrading the spl-governance dependency!
#          Recently the discriminator for new VoterWeightRecord accounts has changed, and upgrading
#          this dependency here without also upgrading the spl-governance program instance beforehand
#          would lead to VWR accounts that are unusable until the spl-governance program is upgraded.
spl-governance = { version = "=2.2.1", features = ["no-entrypoint"] }
spl-governance-addin-api = "=0.1.1"
solana-program = "~1.10.29"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = "~1.10.29"
solana-program-test = "~1.10.29"
solana-logger = "~1.10.29"
solana-banks-client = "~1.10.29"
spl-token = { version = "^3.3.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bytemuck = "^1.7.2"
serde = "^1.0"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
