[package]
name = "hexboosting"
version = "0.2.3"
# Trigger deployment - timestamp: 03-31-2025 #3
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hexboosting"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "helium-sub-daos/idl-build", "mobile-entity-manager/idl-build", "data-credits/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-zk-sdk = { workspace = true }
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
helium-sub-daos = { workspace = true }
mobile-entity-manager = { workspace = true }
bytemuck = "1.14.0"
data-credits = { workspace = true, features = ["cpi"] }
default-env = { workspace = true }
