[package]
name = "hotspot-issuance"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hotspot_issuance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
mpl-token-metadata = {version = "1.3.4", features = ["no-entrypoint"]}