cargo-features = ["workspace-inheritance"]

[package]
name = "lazy-distributor"
version = "0.0.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_distributor"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
bubblegum-cpi = { workspace = true }
circuit-breaker = { path = "../circuit-breaker", features = ["cpi"] }
shared-utils = { path = "../../utils/shared-utils" }
account-compression-cpi = { workspace = true }
