[package]
name = "lazy-distributor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_distributor"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
bubblegum-cpi = { workspace = true }
circuit-breaker = { workspace = true }
shared-utils = { workspace = true }
account-compression-cpi = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
