[package]
name = "lazy-distributor"
version = "0.3.2"
# Trigger deployment - timestamp: 03-31-2025 #3
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_distributor"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-zk-sdk = { workspace = true }
mpl-token-metadata = { workspace = true }
bubblegum-cpi = { workspace = true }
circuit-breaker = { workspace = true }
shared-utils = { workspace = true }
account-compression-cpi = { workspace = true }
solana-security-txt = { workspace = true }
solana-program = { workspace = true }
default-env = { workspace = true }
rewards-oracle = { path = "../rewards-oracle", features = ["cpi"] }
