cargo-features = ["workspace-inheritance"]

[package]
name = "lazy-transactions"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_transactions"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-concurrent-merkle-tree = "0.1.2"
bytemuck = "1.13.0"
shared-utils = { path = "../../utils/shared-utils" }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
