[package]
name = "lazy-transactions"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_transactions"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-concurrent-merkle-tree = "0.2.0"
bytemuck = "1.13.0"
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
