cargo-features = ["workspace-inheritance"]

[package]
name = "mobile-entity-manager"
version = "0.0.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mobile_entity_manager"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
bs58 = "0.3.1"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = "1.12.3"
angry-purple-tiger = "0.1.0"
mpl-token-metadata = { workspace = true }
bubblegum-cpi = { workspace = true }
account-compression-cpi = { workspace = true }
shared-utils = { path = "../../utils/shared-utils" }
helium-entity-manager = { path = "../helium-entity-manager", features = ["cpi"] }

helium-sub-daos = { path = "../helium-sub-daos", features = ["cpi"] }
