[package]
name = "position-voting-rewards"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "position_voting_rewards"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
voter-stake-registry = { path = "../voter-stake-registry", features = ["no-entrypoint", "cpi"] }
default-env = { workspace = true }
proposal = { path = "../../utils/proposal" }

